--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -23,7 +23,7 @@ diff_cont:
 
     use_stamped_vel: false
 
-    # open_loop: false    
+    open_loop: true    
 
     # wheels_per_side: x
     # wheel_separation_multiplier: x
@@ -41,10 +41,10 @@ diff_cont:
     # velocity_rolling_window_size: x
     
 
-    # linear.x.has_velocity_limits: false
+    # linear.x.has_velocity_limits: true
     # linear.x.has_acceleration_limits: false
     # linear.x.has_jerk_limits: false
-    # linear.x.max_velocity: NAN
+    # linear.x.max_velocity: 0.5
     # linear.x.min_velocity: NAN
     # linear.x.max_acceleration: NAN
     # linear.x.min_acceleration: NAN
